# Wingman

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/feather-core/: Cargo.toml
crates/feather-core/src/: api.rs  config.rs  deploy.rs  error.rs  git.rs  lib.rs  models.rs  snapshot.rs  storage.rs  sync.rs
crates/feather-core/tests/: deploy.rs  panel_client.rs  sync.rs  ws.rs
crates/mock-panel/: Cargo.toml
crates/mock-panel/src/: lib.rs  main.rs
crates/wingman-core/: Cargo.toml
crates/wingman-core/src/: api.rs  config.rs  deploy.rs  error.rs  git.rs  lib.rs  models.rs  sync.rs  ws.rs
crates/wingman-core/tests/: deploy.rs  panel_client.rs  sync.rs  ws.rs
docs/: CLOUD-SETUP.md  RELEASING.md  SPEC.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  secrets.rs
src/lib/: api.ts  appStatus.svelte.ts  auth.svelte.ts  cloud.ts  diff.test.ts  diff.ts  format.test.ts  format.ts  linediff.test.ts  linediff.ts  markdown.test.ts  markdown.ts  snapshotcontent.ts  supabase.ts  sync.svelte.ts  team.svelte.ts  types.ts
src/lib/components/: AppShell.svelte  AuthScreen.svelte  CloudCommits.svelte  ConsoleView.svelte  Dashboard.svelte  DeployPanel.svelte  FileBrowser.svelte  FileDiff.svelte  FileEditor.svelte  Footer.svelte  Header.svelte  HistoryView.svelte  ImagePicker.svelte  IssueThread.svelte  IssuesPanel.svelte  LinkProjectDialog.svelte  Logo.svelte  Markdown.svelte  MarkdownEditor.svelte  MembersScreen.svelte  NewProjectDialog.svelte  PanelManager.svelte  ProjectDetail.svelte  ProjectHistory.svelte  ProjectsScreen.svelte  ServerCard.svelte  ServersView.svelte  SetupScreen.svelte  TeamProfile.svelte  TeamSetup.svelte  UpdateDialog.svelte  UserProfile.svelte
supabase/: 0001_foundation.sql  0002_team_create_rpc.sql  0003_fix_panel_crypto.sql  0004_team_members.sql  0005_deploys.sql  0006_issues.sql  0007_project_deletions.sql  0008_profiles.sql  0009_commits.sql  0010_commit_manifests.sql  0011_issue_links.sql  0012_project_logo.sql  0013_server_baseline.sql  0014_image_storage.sql  0015_invite_by_username.sql  0016_commit_details.sql  0017_public_read.sql  0018_deploy_details.sql
supabase/functions/feather-storage/: README.md  index.ts
