[workspace]
resolver = "2"
members = ["crates/feather-core", "crates/mock-panel", "src-tauri"]
# src-tauri needs system webkit2gtk; plain `cargo build`/`test` covers the
# GUI-independent crates so the core stays testable in headless environments.
default-members = ["crates/feather-core", "crates/mock-panel"]

[workspace.package]
version = "2.6.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Timmybott/Feather"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
