[package]
name = "feather"
description = "Feather — desktop client for Pterodactyl with a one-click deploy workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "feather_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
feather-core = { path = "../crates/feather-core" }
