[package]
name = "mock-panel"
description = "Mock of the Pterodactyl client API subset used by Wingman, for tests and local development"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal", "net", "sync", "time"] }
