[package]
name = "mock-panel"
description = "Mock of the Pterodactyl client API subset used by Feather, for tests and local development"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
flate2 = "1"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4"
tokio = { workspace = true, features = ["signal", "net", "sync", "time"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
