[package]
name = "wingman-core"
description = "Core logic for Wingman: Pterodactyl client API, configuration, deploy engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
url = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mock-panel = { path = "../mock-panel" }
tempfile = "3"
tokio = { workspace = true }
