[package]
name = "wingman-core"
description = "Core logic for Wingman: Pterodactyl client API, configuration, deploy engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flate2 = "1"
futures-util = "0.3"
# Local repository operations only — no https/ssh transports needed, which
# keeps openssl/libssh2 out of the build.
git2 = { version = "0.20", default-features = false }
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4"
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process", "sync", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
url = { workspace = true }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
mock-panel = { path = "../mock-panel" }
tokio = { workspace = true }
